chore(infra): update devcontainer and dashboard labels

--- a/dashboard.html
+++ b/dashboard.html
@@ -376,11 +376,11 @@
             'rust-axum': '#ff6b6b',
             'go-fiber': '#4ecdc4',
             'python-fastapi-granian': '#45b7d1',
-            'python-fastapi-uvicorn': '#96ceb4',
+            'python-fastapi': '#96ceb4',
             'js-bun-native': '#feca57',
             'js-bun-express+bunpg': '#ff9ff3',
-            'js-bun-express': '#54a0ff',
-            'js-node-express': '#5f27cd'
+            'bun-js-express': '#54a0ff',
+            'node-js-express': '#5f27cd'
         };
 
         let charts = {};
